# OC_P13_Agent_IA

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: agent.py  evaluate.py  health.py  moves.py  vector_search.py  videos.py
backend/app/models/: chess.py
backend/app/services/: agent_service.py  lichess.py  milvus_service.py  stockfish_service.py  youtube_service.py
backend/data/: caro_kann.json  dutch.json  english.json  french.json  italian.json  queens_gambit.json  ruy_lopez.json  sicilian.json
backend/scripts/: fetch_data.py  ingest.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.spec.ts  app.ts
frontend/src/app/components/agent-panel/: agent-panel.css  agent-panel.html  agent-panel.ts
frontend/src/app/components/chessboard/: chessboard.css  chessboard.html  chessboard.ts
frontend/src/app/models/: chess.model.ts
frontend/src/app/services/: chess-api.ts
