[project]
name = "chess-agent-api"
version = "0.1.0"
description = "POC Agent IA Ouvertures Échecs - FFE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "httpx>=0.28.1",
    "pymilvus>=2.6.11",
    "python-chess>=1.999",
    "python-dotenv>=1.0",
    "sentence-transformers>=5.3.0",
]
